[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/character/enemy/NewEnemy.gd" type="Script" id=1]
[ext_resource path="res://asset/Legacy-Fantasy-VL.1 - High Forest - Update 1.5/Mob/Boar/Run/Run-Sheet.png" type="Texture" id=2]
[ext_resource path="res://asset/Legacy-Fantasy-VL.1 - High Forest - Update 1.5/Mob/Boar/Idle/Idle-Sheet.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 9, 8 )

[node name="NewEnemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="spr" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "idle"
playing = true

[node name="dow" type="RayCast2D" parent="spr"]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 8

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2( -1, 8 )
shape = SubResource( 8 )

[node name="TimerMove" type="Timer" parent="."]
wait_time = 3.0

[node name="forward" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 8

[node name="forward2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -25, 0 )
collision_mask = 8

[connection signal="timeout" from="TimerMove" to="." method="_on_Timer_timeout"]
